--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -3,9 +3,9 @@ GRADLE_FILTERS=1.0-projectRelativePath-matches-false-false-build,1.0-projectRela
 GRADLE_NATURES=org.eclipse.jdt.core.javanature
 build.commands=org.eclipse.jdt.core.javabuilder
 connection.arguments=
-connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(C\:\\Users\\Administrator\\Desktop\\gradle-2.11))
-connection.gradle.user.home=C\:\\Users\\Administrator\\Desktop\\gradle-2.11
-connection.java.home=C\:\\Program Files\\Java\\jdk1.8.0_73
+connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.user.home=null
+connection.java.home=null
 connection.jvm.arguments=
 connection.project.dir=
 derived.resources=.gradle,build
